# sinstr

./: Cargo.toml  LICENSE.md  README.md  dagger.json  justfile
.dagger/: go.mod  main.go
.github/workflows/: ci.yaml  dagger.yaml  release.yaml
benches/: string_bench.rs
fuzz/: Cargo.toml  run_all.sh
fuzz/fuzz_targets/: clone_drop.rs  collections.rs  eq.rs  ord.rs  sinstr.rs
src/: discriminant.rs  lib.rs  literal_macro.rs  non_empty.rs  serde.rs  sinstr.rs
tests/: integration.rs
