[package]
name = "sinstr"
version = "0.4.2"
edition = "2024"
authors = ["Tayfun Bocek <tayfunbocek@live.ca>"]
rust-version = "1.88"
description = "A single WORD small string optimization library."
readme = "README.md"
repository = "https://github.com/airblast-dev/sinstr"
license = "MIT"
keywords = ["string", "compact", "small", "memory", "token"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
compact_str = "0.9.0"
criterion = { version = "0.5", features = ["html_reports"] }
smartstring = "1.0.1"

[[bench]]
name = "string_bench"
harness = false
